--- a/JS Assignement/index.html
+++ b/JS Assignement/index.html
@@ -11,7 +11,7 @@
     <h1>ClimateTrackr</h1>
     <div class="container">
       <div class="weather-input">
-        <h3>Enter a City Name</h3>
+        <h3 style="color: white">Enter a City Name</h3>
         <input class="city-input" type="text" placeholder="E.g., New York, London, Tokyo">
         <button class="search-btn">Search</button>
         <div class="separator"></div>
@@ -27,7 +27,7 @@
           </div>
         </div>
         <div class="days-forecast">
-          <h2>5-Day Forecast</h2>
+          <h2 style="color: white">5-Day Forecast</h2>
           <ul class="weather-cards">
             <li class="card">
               <h3>( ______ )</h3>
